--- a/University.csproj
+++ b/University.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LinqSnippets\LinqSnippets.csproj" />
+  </ItemGroup>
+
 </Project>
