--- a/University.csproj
+++ b/University.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LinqSnippets\LinqSnippets.csproj" />
+    <ProjectReference Include="..\SomeLibraryToStage\SomeLibraryToStage.csproj" />
   </ItemGroup>
 
 </Project>
