--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UniversityDB": "Server=localhost\\SQLEXPRESS;Database=UniversityDB;Trusted_Connection=True;"
+  },
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "",
+    "ValidateIssuer": true,
+    "ValidIssuer": "https://localhost:7255",
+    "ValidateAudience": true,
+    "ValidAudience": "http://localhost:7255",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
   }
 }
